--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bilissoftware/bmq-sdk-js",
-  "version": "0.1.0-dev",
+  "name": "@hatish/hati-sdk-node",
+  "version": "0.2.0-dev",
   "description": "",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
