--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@hatish/hati-sdk-node",
-  "version": "0.2.0-dev",
+  "version": "0.2.1-dev",
   "description": "",
-  "main": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
-      "default": "./dist/src/index.js"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
@@ -17,7 +17,7 @@
     "test": "npm run build && jest",
     "example": "npm run build && node dist/example/index.js"
   },
-  "author": "Mac Lisowski",
+  "author": "Maciej Lisowski",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
